kubernetes/istio/virutal-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-app1
spec:
  hosts:
  - "*"
  gateways:
  - istio-application-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app1
        port:
          number: 1323
  - match:
    - uri:
        exact: "/action"
    route:
    - destination:
        host: app1
        port:
          number: 1323
